--- a/index.html
+++ b/index.html
@@ -8,14 +8,26 @@
   
 <body>
   <a href="files/MREGFLYER.pdf" style="color:red;"  >DOWNLOAD PDF</a>
-    <center>
+  <div id="viewer" style="width: 100%; height: 900px;"></div>
+  <script type="text/javascript" src="https://cloudpdf.io/viewer.min.js"></script>
+  <script>
+    const config = { 
+      documentId: 'e8fa5f4d-8270-4eff-a376-33d951750630',
+      darkMode: true, 
+      token: '' //add your server side generated security token or change your document permission to public
+    };
+    CloudPDF(config, document.getElementById('viewer')).then((instance) => {
+      
+    });
+  </script>
+    <!-- <center>
         <embed src= 
-"https://drive.google.com/file/d/1BRnzJ_-yqAdL4WONtlWGqo7Tw7SZNnCD/preview" 
+"https://drive.google.com/file/d/1BRnzJ_-yqAdL4WONtlWGqo7Tw7SZNnCD/preview"
               width="100%";
               height="900px";
               >
              
     </embed>
-    </center>
+    </center> -->
 </body>
 </html>
